--- a/_includes/global-title-header.html
+++ b/_includes/global-title-header.html
@@ -1,1 +1,1 @@
-<a>Kee Files</a><a class="material-icons" style="font-size:36px">folder</a>
+<a href="/">Kee Files</a><a href="/" class="material-icons" style="font-size:36px">folder</a>
